Updating to allow loading system methods